# microcosm

./: .hgsub  .hgsubstate  BUILDING  build-gcc-deps.sh  build-native.sh  build.sh  buildcc.sh  clean.sh  config.sh  defs.sh  musl.config.mak  paths.sh  sample-config.sh  tarballs  use.sh
config/: busybox.config
cross/: binutils-2.22-microcosm.diff  buildcc-native.sh  buildcc.sh  builddefs.sh  config.sub  gcc-4.7.0-microcosm.diff
cross/old/: binutils-2.20.1-microcosm.diff  gcc-4.5.0-microcosm.diff
extra/: config.sub
libmicrocosm/: COPYING  Makefile  Makefile.am  abi.h  configure.ac  constructor.h  dirent.c  everything.h  halloca.h  malloc.c  microcosmabi.h  names.c  reerrno.h  syscall.c  target-errno.h  visibility.h
libmicrocosm/clock/: clock_gettime.c
libmicrocosm/conv/: Makefile.am  README  convgen.c  enum_clockid.conv  enum_fcntl_cmd.conv  enum_ioctl_request.conv  enum_seek.conv  flags_access.conv  flags_clone.conv  flags_mmap.conv  flags_mmap_prot.conv  flags_open.conv  flags_stat_mode.conv  flags_tcflag.conv  flags_wait.conv  struct_dirent.conv  struct_flock.conv  struct_iovec.conv  struct_pollfd.conv  struct_stat.conv  struct_termios.conv  struct_timespec.conv  struct_timeval.conv  struct_tms.conv  struct_winsize.conv
libmicrocosm/fcntl/: fcntl.c  open.c
libmicrocosm/misc/: ioctl.c
libmicrocosm/mman/: mmap.c  mprotect.c
libmicrocosm/process/: execve.c  fork.c  wait4.c
libmicrocosm/select/: poll.c
libmicrocosm/stat/: chmod.c  fstat.c  lstat.c  stat.c  statcore.c  umask.c
libmicrocosm/thread/: clone.c
libmicrocosm/time/: gettimeofday.c  times.c
libmicrocosm/unistd/: access.c  close.c  dup2.c  getcwd.c  getegid.c  geteuid.c  getgid.c  getpid.c  getppid.c  getuid.c  lseek.c  pipe.c  read.c  readlink.c  readv.c  setgid.c  setuid.c  unlink.c  write.c  writev.c
libmicrocosm/vfs/: hostfs.c  vfs.c  vfs.h
libmicrocosm_host/: Makefile.am  config.h  configure.ac  syscall.c
libmicrocosm_host/conv/: Makefile.am
libmicrocosm_host/stat/: stat.c
libmicrocosm_host/structs/: Makefile.am  buffer.h  struct_iovec.struct  struct_stat.struct  structcgen.c
libmicrocosm_host/sys/: writev.c
libmicrocosm_host/unistd/: getgid.c  getuid.c  writev.c
patches/: busybox-1.20.2-musl.diff  gcc-4.7.1-musl.diff
scripts/: config.sub
