#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.6])
AC_INIT([libmicrocosm_host], [0], [Richards@codu.org])
AC_CONFIG_SRCDIR([syscall.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([../scripts])

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([
Makefile
conv/Makefile
])
AC_OUTPUT
